--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ medspacy = "^1.2.0"
 beautifulsoup4 = "^4.12.3"
 
 
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
