--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = ""
 authors = ["Alejandro Alonso Lopez <aalonsopersonal@gmail.com> <aalonso@lst.tfo.upm.es>"]
 readme = "README.md"
 package-mode = false
+repository = "https://github.com/aalonsolopez/preprocessor"
 
 [tool.poetry.dependencies]
 python = "^3.10"
