--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.10"
 requests = "^2.32.3"
 medspacy = "^1.2.0"
 beautifulsoup4 = "^4.12.3"
+fastapi = "^0.112.1"
 
 
 [tool.poetry.group.dev.dependencies]
