--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,4 @@
+
 [tool.poetry]
 name = "preprocessor"
 version = "0.1.0"
@@ -12,8 +13,11 @@ python = "^3.10"
 requests = "^2.32.3"
 medspacy = "^1.2.0"
 beautifulsoup4 = "^4.12.3"
-fastapi = "^0.112.1"
 pylint = "^3.2.6"
+fastapi = "^0.112.2"
+uvicorn = {extras = ["standard"], version = "^0.30.6"}
+numpy = "1.26.4"
+
 
 
 [tool.poetry.group.dev.dependencies]
